--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -1,4 +1,11 @@
-body
-{
-background-color:#d0e4fe;
+body, html {
+    height: 100%;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33));
+}
+
+.card-container.card {
+    max-width: 600px;
+    margin-left:250px;
+    padding: 50px, 10px;
 }
