--- a/WebContent/style.css
+++ b/WebContent/style.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .card-container.card {
-    max-width: 600px;
-    margin-left:250px;
-    padding: 50px, 10px;
+    max-width: 550px;
+    padding: 20px 40px;
+    margin: auto;
 }
